# FastAPI-Langchain

./: .env.example  LICENSE  init.py  pyproject.toml  readme.md
app/: main.py
app/agent_utils/: agent_service.py  postgres_saver.py  prompts.py  tool_models.py  utils.py
app/api/agents/v1/: urls.py
app/api/agents/v1/test_agents/: sample_1.py
app/api/users/v1/: urls.py
app/api/users/v1/user/: user.py
app/core/: config.py  db.py
app/fixtures/: user_data.py
app/models/users/: user.py
app/utilities/: crud.py
