[project]
name = "langgraph-agent-template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.0",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langgraph>=1.0.5",
    "langgraph-checkpoint>=3.0.1",
    "langgraph-checkpoint-postgres>=3.0.2",
    #   "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "python-dotenv==1.2.1",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.30",
    "uvicorn>=0.40.0",
    "pyjwt>=2.10.1",
    "passlib[argon2]>=1.7.4",
]
